// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Profile event handlers A list of quota options for a given profile is returned 1`] = `
Array [
  Array [
    Object {
      "text": "
        SELECT * FROM profile
          WHERE id = $1 AND archived = false;",
      "values": Array [
        4,
      ],
    },
  ],
]
`;

exports[`Profile event handlers A list of quota options for a given profile is returned 2`] = `200`;

exports[`Profile event handlers A list of quota options for a given profile is returned 3`] = `
Array [
  "medium",
]
`;

exports[`Profile event handlers A profiles contacts are returned 1`] = `
Array [
  Array [
    Object {
      "text": "
        SELECT contact.*
          FROM contact
          JOIN profile_contact ON contact.id = profile_contact.contact_id
            WHERE profile_contact.profile_id = $1;
      ",
      "values": Array [
        1,
      ],
    },
  ],
]
`;

exports[`Profile event handlers A profiles contacts are returned 2`] = `200`;

exports[`Profile event handlers A profiles contacts are returned 3`] = `
Array [
  Object {
    "archived": false,
    "createdAt": "2020-09-10T18:14:13.436Z",
    "email": "jane@example.com",
    "firstName": "Jane",
    "githubId": "jane1100",
    "id": 1,
    "lastName": "Doe",
    "roleId": 1,
    "updatedAt": "2020-09-10T18:14:13.436Z",
  },
  Object {
    "archived": false,
    "createdAt": "2020-09-10T18:14:13.436Z",
    "email": "jim@example.com",
    "firstName": "Jim",
    "githubId": "jim1100",
    "id": 2,
    "lastName": "Doe",
    "roleId": 2,
    "updatedAt": "2020-09-10T18:14:13.436Z",
  },
]
`;

exports[`Profile event handlers A profiles quota size is returned 1`] = `
Array [
  Array [
    Object {
      "text": "
        SELECT * FROM profile
          WHERE id = $1 AND archived = false;",
      "values": Array [
        4,
      ],
    },
  ],
]
`;

exports[`Profile event handlers A profiles quota size is returned 2`] = `200`;

exports[`Profile event handlers A profiles quota size is returned 3`] = `"small"`;

exports[`Profile event handlers Fetch a list of quota options for a given profile should throw 1`] = `"Unable to fetch quota options for profile 4"`;

exports[`Profile event handlers Fetch a list of quota options for a given profile should throw 2`] = `
Array [
  Array [
    Object {
      "text": "
        SELECT * FROM profile
          WHERE id = $1 AND archived = false;",
      "values": Array [
        4,
      ],
    },
  ],
]
`;

exports[`Profile event handlers Fetch profiles quota size should throw 1`] = `"Unable fetch profile quota size with profile ID 4"`;

exports[`Profile event handlers Fetch profiles quota size should throw 2`] = `
Array [
  Array [
    Object {
      "text": "
        SELECT * FROM profile
          WHERE id = $1 AND archived = false;",
      "values": Array [
        4,
      ],
    },
  ],
]
`;

exports[`Profile event handlers Fetch single profile contacts should throw 1`] = `"Unable fetch profile contacts with profile ID 1"`;

exports[`Profile event handlers Fetch single profile contacts should throw 2`] = `
Array [
  Array [
    Object {
      "text": "
        SELECT contact.*
          FROM contact
          JOIN profile_contact ON contact.id = profile_contact.contact_id
            WHERE profile_contact.profile_id = $1;
      ",
      "values": Array [
        1,
      ],
    },
  ],
]
`;

exports[`Profile event handlers Link a contact to profile should throw 1`] = `"Unable to create contact"`;

exports[`Profile event handlers Link a contact to profile should throw 2`] = `
Array [
  Array [
    Object {
      "text": "
        INSERT INTO profile_contact
          (profile_id, contact_id)
          VALUES ($1, $2) RETURNING *;",
      "values": Array [
        4,
        1,
      ],
    },
  ],
]
`;

exports[`Profile event handlers Link a contact to profile successfully 1`] = `
Array [
  Array [
    Object {
      "text": "
        INSERT INTO profile_contact
          (profile_id, contact_id)
          VALUES ($1, $2) RETURNING *;",
      "values": Array [
        4,
        1,
      ],
    },
  ],
]
`;

exports[`Profile event handlers Link a contact to profile successfully 2`] = `204`;

exports[`Profile event handlers Link a contact to profile successfully 3`] = `undefined`;

exports[`Profile event handlers Profile edit requests are returned 1`] = `Array []`;

exports[`Profile event handlers Profile edit requests are returned 2`] = `200`;

exports[`Profile event handlers Profile edit requests are returned 3`] = `undefined`;

exports[`Profile event handlers Request profile contacts edit with provisioner-related changes 1`] = `
Array [
  Array [
    Object {
      "text": "
        SELECT * FROM contact
          WHERE id = $1 AND archived = false;",
      "values": Array [
        1,
      ],
    },
  ],
  Array [
    Object {
      "text": "
        SELECT * FROM contact
          WHERE id = $1 AND archived = false;",
      "values": Array [
        2,
      ],
    },
  ],
]
`;

exports[`Profile event handlers Request profile contacts edit with provisioner-related changes 2`] = `204`;

exports[`Profile event handlers Request profile contacts edit with provisioner-related changes 3`] = `undefined`;

exports[`Profile event handlers Request profile quota size edit should throw due to db transaction issue 1`] = `"Unable to request quota size for profile 4"`;

exports[`Profile event handlers Request profile quota size edit should throw due to db transaction issue 2`] = `
Array [
  Array [
    Object {
      "text": "
        SELECT * FROM profile
          WHERE id = $1 AND archived = false;",
      "values": Array [
        4,
      ],
    },
  ],
]
`;

exports[`Profile event handlers Request profile quota size edit should throw due to invalid quota upgrade 1`] = `"Unable to request quota size for profile 4"`;

exports[`Profile event handlers Request profile quota size edit should throw due to invalid quota upgrade 2`] = `
Array [
  Array [
    Object {
      "text": "
        SELECT * FROM profile
          WHERE id = $1 AND archived = false;",
      "values": Array [
        4,
      ],
    },
  ],
]
`;

exports[`Profile event handlers Request profile quota size edit successfully 1`] = `
Array [
  Array [
    Object {
      "text": "
        SELECT * FROM profile
          WHERE id = $1 AND archived = false;",
      "values": Array [
        4,
      ],
    },
  ],
]
`;

exports[`Profile event handlers Request profile quota size edit successfully 2`] = `204`;

exports[`Profile event handlers Request profile quota size edit successfully 3`] = `undefined`;

exports[`Profile event handlers Update profile contacts with non provisioner-related changes 1`] = `
Array [
  Array [
    Object {
      "text": "
        SELECT * FROM contact
          WHERE id = $1 AND archived = false;",
      "values": Array [
        1,
      ],
    },
  ],
  Array [
    Object {
      "text": "
        SELECT * FROM contact
          WHERE id = $1 AND archived = false;",
      "values": Array [
        2,
      ],
    },
  ],
]
`;

exports[`Profile event handlers Update profile contacts with non provisioner-related changes 2`] = `204`;

exports[`Profile event handlers Update profile contacts with non provisioner-related changes 3`] = `undefined`;
